fix sidebar height on mobile orientation

--- a/coleraine/assets/src/sass/style.scss
+++ b/coleraine/assets/src/sass/style.scss
@@ -266,7 +266,7 @@ body {
     position: absolute;
     right: 0;
     top: 0;
-    height: calc(100vh - 8rem);
+    height: 100vh;
     left: unset;
     flex-direction: column;
     overflow: hidden;
